test/example/controller/error/handler/throw_from_model.js
module.exports = {
  get: async (controller) => {
    return controller.model.test.error.throwFromMethod()
  }
}
